--- a/.github/workflows/continuous-integration-workflow.yml
+++ b/.github/workflows/continuous-integration-workflow.yml
@@ -21,7 +21,7 @@ jobs:
             - name: Cache cargo build
               uses: actions/cache@v1
               with:
-                path: target
+                path: data-collector/target
                 key: ${{ runner.os }}-data-collector-cargo-build-target-${{ hashFiles('data-collector/Cargo.lock') }}
             - name: Build
               run: cargo build
@@ -43,15 +43,10 @@ jobs:
               with:
                 path: ~/.cargo/registry
                 key: ${{ runner.os }}-kiln-lib-cargo-registry-${{ hashFiles('kiln_lib/Cargo.lock') }}
-            - name: Cache cargo index
-              uses: actions/cache@v1
-              with:
-                path: ~/.cargo/git
-                key: ${{ runner.os }}-kiln-lib-cargo-index-${{ hashFiles('kiln_lib/Cargo.lock') }}
             - name: Cache cargo build
               uses: actions/cache@v1
               with:
-                path: target
+                path: kiln_lib/target
                 key: ${{ runner.os }}-kiln-lib-cargo-build-target-${{ hashFiles('kiln_lib/Cargo.lock') }}
             - name: Build
               run: cargo build
